--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,8 +25,7 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build with Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: build
+        run: ./gradlew build
 
       - name: Publish Artifacts
         run: |
